--- a/comp-actions/smk-build/action.yaml
+++ b/comp-actions/smk-build/action.yaml
@@ -14,6 +14,7 @@ runs:
   steps: 
     - id: calculateImageTag
       name: calculate Image Tag
+      shell: bash
       run: |
         repoandorg=${{ github.repository }}
         REPO=$(basename "$repoandorg")
@@ -34,6 +35,7 @@ runs:
         echo  $DEBUG_DEPLOY      shell: bash
 
     - id: print-outputs
+      shell: bash
       run: |
         #echo "::set-output name=random-id::$(echo $RANDOM)"
         echo "test number is 44"
