--- a/.github/workflows/build-comp.yaml
+++ b/.github/workflows/build-comp.yaml
@@ -32,7 +32,7 @@ jobs:
     - uses: ./comp-actions/smk-build
       id: buildSMKContainer
       with:
-        OC-DEV-TOKEN: blahblahblah
+        OC-DEV-TOKEN: ${{ secrets.TEST_SECRET }}
       
 
 
