--- a/comp-actions/smk-build/action.yaml
+++ b/comp-actions/smk-build/action.yaml
@@ -91,7 +91,7 @@ runs:
         GITHUBOWNERREPO=${{ github.repository }}
         GITHHUBREPO=${{ steps.calculateImageTag.outputs.REPO }}
         DOCKER_REPO=${{ steps.calculateImageTag.outputs.DOCKER_VERSION_TAG }}
-        
+
         echo GITHUBOWNERREPO $GITHUBOWNERREPO
         echo GITHHUBREPO $GITHHUBREPO
         echo DOCKER_REPO $DOCKER_REPO
@@ -101,4 +101,59 @@ runs:
         echo ${{ inputs.GHCR_TOKEN }} | docker login https://docker.pkg.github.com -u ${{ inputs.GHCR_USER }} --password-stdin
         docker build -t $DOCKER_REPO .
         docker push $DOCKER_REPO
+      
+    - name: Cache Image Tag
+      shell: bash
+      id: cacheImageTag
+      run: |
+        IMAGETAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
+        # needs to be made unique to app being deployed
+        # CONFMAP_NAME=imagetag2deploy
+        CONFMAP_NAME=${{ steps.calculateImageTag.outputs.REPO }}-imagetag-cm
+        CONF_EXISTS=$(oc get configmaps -o json |  jq '[.items[] | select(.metadata.name == "'$CONFMAP_NAME'")] | length')
+        echo conf exists is $CONF_EXISTS
+        echo imagetag is $IMAGETAG
+        
+        if [ $CONF_EXISTS -eq 0 ] 
+          then
+            methodType="create"
+        else
+            methodType="replace"
+        fi
+        echo methodType is $methodType
+        oc create configmap $CONFMAP_NAME --from-literal=current_image_tag=$IMAGETAG --dry-run -o yaml > template.yaml
+        oc $methodType -f template.yaml
+
+    - name: Tag the pull request with build tag
+      id: tagpullrequest
+      run: |
+        DOCKER_VERSION_TAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
+
+        echo tag version is $DOCKER_VERSION_TAG
+        #pull_number=$(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+        echo github event path: $GITHUB_EVENT_PATH
+        echo $GITHUB_WORKSPACE
+
+        # use this for pulls
+        issue_url=$(jq --raw-output .pull_request.issue_url "$GITHUB_EVENT_PATH")
+        echo issue url is $issue_url
+
+        # for debugging using existing pull_request
+        if [ -z "$issue_url" ] || [ "$issue_url" = "null" ]
+          then
+            issue_url="https://api.github.com/repos/bcgov/smk-fap-fcb/issues/4"
+        fi
+
+        # ---- adding the tag that was assigned to the image to the issue ----
+        jsonwithlabels=$(curl --header "Content-Type: application/json" \
+        --header "authorization: Bearer ${{ secrets.GHCR_TOKEN }}" \
+        --request GET \
+        $issue_url | jq '.labels |= . + ["'$DOCKER_VERSION_TAG'"] | {("labels"): .["labels"]?}')
+        
+        # now send modified json back to the api with the new label
+        curl \
+        --location --request POST $issue_url \
+        --header "Content-Type: application/json" \
+        --header "authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+        --data "$jsonwithlabels"
 
