adding missing shell tag

--- a/comp-actions/smk-build/action.yaml
+++ b/comp-actions/smk-build/action.yaml
@@ -126,6 +126,7 @@ runs:
 
     - name: Tag the pull request with build tag
       id: tagpullrequest
+      shell: bash
       run: |
         DOCKER_VERSION_TAG=${{ steps.calculateImageTag.outputs.TIMESTAMPTAG }}
 
