--- a/.github/workflows/build-comp.yaml
+++ b/.github/workflows/build-comp.yaml
@@ -29,13 +29,26 @@ jobs:
         fetch-depth: 0
     # - uses: managedkaos/github-actions-two-actions/action1@master
     #- uses: bcgov/smk-actions/smk-build@main
-    - uses: ./comp-actions/smk-build
-      id: buildSMKContainer
+    # - uses: ./comp-actions/smk-build
+    #   id: buildSMKContainer
+    #   with:
+    #     OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
+    #     OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
+    #     GHCR_USER: ${{ secrets.GHCR_USER }}
+    #     GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+    #     DOCKER_REGISTRY: 'docker.pkg.github.com'
+
+    - uses: ./comp-actions/smk-deploy
+      id: deploySMKContainer
       with:
         OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
         OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
         GHCR_USER: ${{ secrets.GHCR_USER }}
         GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+        DOCKER_REGISTRY: 'docker.pkg.github.com'
+        PR_REVIEWERS: '["GuyTheFlower", "NicoledeGreef"]'
+        PR_MENTIONS: '["GuyTheFlower", "NicoledeGreef", "franTarkenton"]'
+
 
 
 
