--- a/comp-actions/smk-deploy/action.yaml
+++ b/comp-actions/smk-deploy/action.yaml
@@ -93,7 +93,8 @@ runs:
         oc project $OCDEVNAMESPACE
         project=$(oc project --short=true)
         if [ "$project" != "$OCDEVNAMESPACE" ]
-          then 
+          then
+              echo exiting
               exit 1
         fi
         prodlength=$( expr length ${{ inputs.OPENSHIFT_TOKEN_PRD }})
@@ -105,18 +106,17 @@ runs:
             echo 'prod deploy'
         fi
         
-    # - name: 'Get openshift namespace'
-    #   id: getOcNamespace
-    #   shell: bash
-    #   run: |
-    #     REPONAME=${{ steps.getRepo.outputs.REPONAME }}
-    #     #ISSUE_CONFIGMAP_NAME=github-issues-configmap
-    #     CONFMAPISSUEURLKEY=issueURL
-    #     ISSUE_CONFIGMAP_NAME=$REPONAME-gh-issues-cm
-    #     echo configmap name $ISSUE_CONFIGMAP_NAME
-    #     ISSUE_URL=$(oc get configmap $ISSUE_CONFIGMAP_NAME  -o json | jq .data.$CONFMAPISSUEURLKEY)
-    #     echo ISSUE_URL $ISSUE_URL
-    #     echo ::set-output name=ISSUE_URL::${ISSUE_URL}
+    - name: 'Get openshift namespace'
+      id: getOcNamespace
+      shell: bash
+      run: |
+        #REPONAME=${{ steps.getRepo.outputs.REPONAME }}
+        CONFMAPISSUEURLKEY=issueURL
+        ISSUE_CONFIGMAP_NAME=${{ steps.getRepo.outputs.REPONAME }}-gh-issues-cm
+        echo configmap name $ISSUE_CONFIGMAP_NAME
+        ISSUE_URL=$(oc get configmap $ISSUE_CONFIGMAP_NAME  -o json | jq .data.$CONFMAPISSUEURLKEY)
+        echo ISSUE_URL $ISSUE_URL
+        echo ::set-output name=ISSUE_URL::${ISSUE_URL}
 
 
     
