--- a/comp-actions/smk-deploy/action.yaml
+++ b/comp-actions/smk-deploy/action.yaml
@@ -99,7 +99,8 @@ runs:
         fi
         echo got here
         echo prod token: ${{ inputs.OPENSHIFT_TOKEN_PRD }}
-        #prodToken=${{ inputs.OPENSHIFT_TOKEN_PRD }}
+        prodToken=$(echo ${{ inputs.OPENSHIFT_TOKEN_PRD }})
+        echo param set
         prodlength=$( expr length ${{ inputs.OPENSHIFT_TOKEN_PRD }} )
         echo prod length $prodlength
         if [ "$prodlength" -eq "0" ]
