--- a/.github/workflows/build-comp.yaml
+++ b/.github/workflows/build-comp.yaml
@@ -28,25 +28,25 @@ jobs:
       with:
         fetch-depth: 0
 
-    - uses: bcgov/smk-actions/smk-build@main
-      id: buildSMKContainer
-      with:
-        OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
-        OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
-        GHCR_USER: ${{ secrets.GHCR_USER }}
-        GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-        DOCKER_REGISTRY: 'docker.pkg.github.com'
-
-    # - uses: ./comp-actions/smk-deploy
-    #   id: deploySMKContainer
+    # - uses: bcgov/smk-actions/smk-build@main
+    #   id: buildSMKContainer
     #   with:
     #     OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
     #     OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
     #     GHCR_USER: ${{ secrets.GHCR_USER }}
     #     GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
     #     DOCKER_REGISTRY: 'docker.pkg.github.com'
-    #     PR_REVIEWERS: '["GuyTheFlower", "NicoledeGreef"]'
-    #     PR_MENTIONS: '["GuyTheFlower", "NicoledeGreef", "franTarkenton"]'
+
+    - uses: ./comp-actions/smk-deploy
+      id: deploySMKContainer
+      with:
+        OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
+        OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
+        GHCR_USER: ${{ secrets.GHCR_USER }}
+        GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+        DOCKER_REGISTRY: 'docker.pkg.github.com'
+        PR_REVIEWERS: '["GuyTheFlower", "NicoledeGreef"]'
+        PR_MENTIONS: '["GuyTheFlower", "NicoledeGreef", "franTarkenton"]'
 
 
 
