--- a/comp-actions/smk-build/action.yaml
+++ b/comp-actions/smk-build/action.yaml
@@ -16,10 +16,10 @@ inputs:
   DOCKER_REGISTRY:
     description: 'the docker registry where the image will be pulled from'
     required: true
-outputs:
-  random-number: 
-    description: "Random number"
-    value: ${{ steps.random-number-generator.outputs.random-id }}
+# outputs:
+#   random-number: 
+#     description: "Random number"
+#     value: ${{ steps.random-number-generator.outputs.random-id }}
 runs:
   using: "composite"
   steps: 
