--- a/.github/workflows/build-comp.yaml
+++ b/.github/workflows/build-comp.yaml
@@ -10,7 +10,7 @@ jobs:
       run:
         shell: bash
 
-    name: Build BCDC-SMK container image
+    name: 'Build BCDC-SMK container image'
     # The type of runner that the job will run on
     runs-on: ubuntu-18.04
     env:
@@ -29,13 +29,14 @@ jobs:
         fetch-depth: 0
 
     # - uses: bcgov/smk-actions/smk-build@main
-    #   id: buildSMKContainer
-    #   with:
-    #     OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
-    #     OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
-    #     GHCR_USER: ${{ secrets.GHCR_USER }}
-    #     GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-    #     DOCKER_REGISTRY: 'docker.pkg.github.com'
+    - uses: ./comp-actions/smk-build
+      id: buildSMKContainer
+      with:
+        OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
+        OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
+        GHCR_USER: ${{ secrets.GHCR_USER }}
+        GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+        DOCKER_REGISTRY: 'docker.pkg.github.com'
 
     - uses: ./comp-actions/smk-deploy
       id: deploySMKContainer
