--- a/comp-actions/smk-deploy/action.yaml
+++ b/comp-actions/smk-deploy/action.yaml
@@ -174,6 +174,9 @@ runs:
       id: updateissue
       shell: bash
       run: |
+        
+        # THIS
+        JUNK=test
 
         # retrieve the route url
         # ---------------------------------------------------------
