--- a/.github/workflows/build-comp.yaml
+++ b/.github/workflows/build-comp.yaml
@@ -29,14 +29,14 @@ jobs:
         fetch-depth: 0
 
     # - uses: bcgov/smk-actions/smk-build@main
-    - uses: ./comp-actions/smk-build
-      id: buildSMKContainer
-      with:
-        OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
-        OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
-        GHCR_USER: ${{ secrets.GHCR_USER }}
-        GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
-        DOCKER_REGISTRY: 'docker.pkg.github.com'
+    # - uses: ./comp-actions/smk-build
+    #   id: buildSMKContainer
+    #   with:
+    #     OPENSHIFT_SERVER_URL: ${{ secrets.OPENSHIFT_SERVER_URL }}
+    #     OPENSHIFT_TOKEN_DEV: ${{ secrets.OPENSHIFT_TOKEN_DEV }}
+    #     GHCR_USER: ${{ secrets.GHCR_USER }}
+    #     GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+    #     DOCKER_REGISTRY: 'docker.pkg.github.com'
 
 
     # if you provide the prod api key then deploy is to prod
